--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0"
   }
 }
