--- a/backend/pro.env
+++ b/backend/pro.env
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb://localhost:27017/mydatabase
 PORT=5000
 JWT_SECRET=your_jwt_secret
+
+# Cloudinary Config (Đăng ký tại https://cloudinary.com)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
