--- a/backend/pro.env
+++ b/backend/pro.env
@@ -1,3 +1,13 @@
 MONGODB_URI=mongodb://localhost:27017/mydatabase
 PORT=5000
 JWT_SECRET=your_jwt_secret
+
+# Email Config (Gmail SMTP)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password_here
+EMAIL_FROM=User Management System
+
+# Frontend URL (for reset password link)
+FRONTEND_URL=http://localhost:3000
