--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.19.1"
   }
