--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "sharp": "^0.34.4"
   }
 }
