--- a/pro.env
+++ b/pro.env
@@ -1,3 +1,20 @@
-MONGODB_URI=mongodb://localhost:27017/mydatabase
+MONGODB_URI=mongodb://localhost:27017/group10
+
 PORT=5000
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=your_jwt_secret_key_12345
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_67890
+
+
+CLOUDINARY_CLOUD_NAME=dnc6gvmyn
+CLOUDINARY_API_KEY=167435299519773
+CLOUDINARY_API_SECRET=EKjBHntUS3B3xk0Gb0rHkqr8LRI
+
+# Gmail SMTP (tạm thời để default, test sau)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=tieuyen0704@gmail.com
+EMAIL_PASSWORD=rwpwdjubkypdlmzf
+EMAIL_FROM=User Management System
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
